fix: prevent unnecessary text wrapping

--- a/public/css/App.css
+++ b/public/css/App.css
@@ -447,11 +447,11 @@ input[type='number'] {
 }
 
 .coin-info-label {
-  width: 65%;
+  width: auto;
 }
 
 .coin-info-value {
-  width: 35%;
+  width: auto;
 }
 
 .coin-info-column-title .coin-info-label {
